src/main/java/cruelteam/plugins/mnlang/grammars/MnlangParser.bnf
{
  parserClass="cruelteam.plugins.mnlang.parser.MnlangParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="Mnlang"
  psiImplClassSuffix="Impl"
  psiPackage="cruelteam.plugins.mnlang.psi"
  psiImplPackage="cruelteam.plugins.mnlang.psi.impl"

  elementTypeHolderClass="cruelteam.plugins.mnlang.psi.MnlangTypes"
  elementTypeClass="cruelteam.plugins.mnlang.psi.MnlangElementType"
  tokenTypeClass="cruelteam.plugins.mnlang.psi.MnlangTokenType"
}

//file ::= line*
//private line ::= entry | PREFIX | COMMENT
//entry ::= (KEY? SEPARATOR VALUE?) | KEY

file ::= line*
private line ::= ENTRY | PREFIX | comment | WHITE_SPACE
private comment ::= COMMENT | DOC_COMMENT
ENTRY ::= KEY SEPARATOR value
private value ::= (VALUE | ESCAPE)+
